# trade-forge

./: .env.example  .gitattributes  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  README.md  SECURITY.md  codecov.yml  commitlint.config.js  docker-compose.yml  package-lock.json  package.json  pyproject.toml  sdd.md
.claude/: settings.json
.claude/agents/: engine-guardian.md  professor.md
.cursor/rules/: 00-core.mdc  10-python.mdc  20-web.mdc
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: ci.yml  codeql.yml
apps/api/: pyproject.toml
apps/api/src/tradeforge_api/: __init__.py  cli.py  config.py  deps.py  health.py  main.py  queue.py  runner.py  schemas.py  worker.py  ws.py
apps/api/src/tradeforge_api/routers/: __init__.py  backtests.py  instruments.py  strategies.py
apps/api/tests/: conftest.py  test_api_package.py  test_cli.py  test_config.py  test_flow_integration.py  test_health.py  test_runner.py  test_schemathesis_integration.py  test_services_integration.py  test_validation.py  test_ws_integration.py
apps/collector/: pyproject.toml
apps/collector/src/tradeforge_collector/: __init__.py  backfill.py  cli.py  gaps.py  mt5_source.py  source.py  storage.py  synthetic.py  timeframes.py
apps/collector/tests/: test_backfill.py  test_catalogue_integration.py  test_cli.py  test_collector_package.py  test_gaps.py  test_mt5_source.py  test_storage.py  test_synthetic.py
apps/executor/: pyproject.toml
apps/executor/src/tradeforge_executor/: __init__.py
apps/executor/tests/: test_executor_package.py
apps/web/: eslint.config.js  index.html  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
apps/web/e2e/: happy-path.spec.ts  screenshot.spec.ts
apps/web/src/: App.test.tsx  App.tsx  format.test.ts  format.ts  main.tsx  store.test.ts  store.ts  test-utils.tsx
apps/web/src/api/: client.test.ts  client.ts  hooks.test.tsx  hooks.ts  types.ts
apps/web/src/components/: EquityCurve.test.tsx  EquityCurve.tsx  MetricCards.test.tsx  MetricCards.tsx  TradesTable.test.tsx  TradesTable.tsx
apps/web/src/screens/: LaunchBacktest.test.tsx  LaunchBacktest.tsx  Results.test.tsx  Results.tsx  StrategyBuilder.test.tsx  StrategyBuilder.tsx
apps/web/src/strategy/: builder.test.ts  builder.ts
docs/adr/: 0009-pacote-db-compartilhado.md  0010-estrategias-append-only.md  0011-precos-decimais-no-parquet.md  0012-nucleo-dono-do-vocabulario.md  0013-mudancas-aditivas-na-dsl-mantem-schema-version.md  0014-ordens-limite-na-engine.md  0015-fills-da-barra-no-context.md  0016-ordens-stop-de-entrada.md  template.md
specs/: README.md  backlog.md  fase-0.md  fase-1.md  fase-2.md  fase-3.md  fase-4.md
tests/: test_architecture.py
