[project]
name = "tradeforge-api"
version = "0.1.0"
description = "FastAPI backend: strategies, backtests, live sessions. Portable (Linux/Docker)."
requires-python = ">=3.12,<3.13"
license = "Apache-2.0"
dependencies = [
    "tradeforge-engine",
    "tradeforge-schema",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tradeforge_api"]
