[project]
name = "tradeforge-api"
version = "0.1.0"
description = "FastAPI backend: strategies, backtests, live sessions. Portable (Linux/Docker)."
requires-python = ">=3.12,<3.13"
license = "Apache-2.0"
dependencies = [
    "tradeforge-engine",
    "tradeforge-schema",
    "pydantic-settings>=2.7",
    "psycopg[binary]>=3.2",
    "redis>=5.2",
]

[project.scripts]
tradeforge-health = "tradeforge_api.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tradeforge_api"]
