[project]
name = "tradeforge-executor"
version = "0.1.0"
description = "MetaTrader 5 execution service (Windows-only): order routing, fills, local risk safeguards."
requires-python = ">=3.12,<3.13"
license = "Apache-2.0"
dependencies = [
    # See collector: Windows-only wheel, and that is the point (ADR-02).
    "MetaTrader5>=5.0.45; sys_platform == 'win32'",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tradeforge_executor"]
